; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lbaselib.c_luaB_xpcall.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lbaselib.c_luaB_xpcall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_MULTRET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_xpcall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_xpcall(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @luaL_checkany(i32* %4, i32 2)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_settop(i32* %6, i32 2)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_insert(i32* %8, i32 1)
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @LUA_MULTRET, align 4
  %12 = call i32 @lua_pcall(i32* %10, i32 0, i32 %11, i32 1)
  store i32 %12, i32* %3, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* %3, align 4
  %15 = icmp eq i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @lua_pushboolean(i32* %13, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @lua_replace(i32* %18, i32 1)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @lua_gettop(i32* %20)
  ret i32 %21
}

declare dso_local i32 @luaL_checkany(i32*, i32) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @lua_insert(i32*, i32) #1

declare dso_local i32 @lua_pcall(i32*, i32, i32, i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_replace(i32*, i32) #1

declare dso_local i32 @lua_gettop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
